<resources>
    <string name="app_name">CoinConverter</string>
    <string name="no_connection">Não conseguimos obter os dados de conversão. Verifique sua conexão com a internet e tente novamente.</string>
    <string name="conversor">Conversor</string>
    <string name="currency_original">Moeda Original</string>
    <string name="currency_destination">Moeda Destino</string>
    <string name="value">Valor</string>
    <string name="result">Resultado</string>
    <string name="order_by_code">Ordenar por código</string>
    <string name="order_by_name">Ordenar por nome</string>
    <string name="search">Busca</string>
    <string name="currencies_list">Lista de moedas</string>
    <string name="fab_description">Botão para ir para a lista de moedas</string>
    <string name="convert">Converter</string>
    <string name="retry">Tentar Novamente</string>
    <string name="search_error">Não existem resultados para serem exibidos aqui :/</string>
    <string name="connection_error">Não foi possível obter as moedas atualizadas. Verifique a sua conexão e tente novamente.</string>
    <string name="label_currency_name">Nome:</string>
    <string name="label_currency_code">Código:</string>
    <string name="convert_error">Houve um erro na conversão das moedas. Estamos atualizando a base de dados, tente novamente em instantes.</string>
    <string name="update_success">Dados atualizados com sucesso.</string>
    <string name="last_update">Atualizado em: %1$s</string>
</resources>
